--- a/public/index.html
+++ b/public/index.html
@@ -161,6 +161,8 @@
                      display: flex; align-items: center; justify-content: space-between; }
         .nav-left { display: flex; align-items: center; gap: 10px; }
         .nav-meta { display: flex; align-items: center; gap: 6px; }
+        .nav-date-mobile { display: none; }
+        .nav-date-desktop { }
         .nav-title { font-weight: 700; font-size: 17px; letter-spacing: -.02em; }
 
         /* -- Badge -- */
@@ -447,6 +449,8 @@
             .form-row { grid-template-columns: 1fr; }
             input[type="text"], input[type="number"], input[type="date"], textarea, select { font-size: 16px; }
             .nav-left { flex-direction: column; align-items: flex-start; gap: 2px; }
+            .nav-date-mobile { display: inline; }
+            .nav-date-desktop { display: none; }
         }
 
         @media (max-width: 640px) {
@@ -1800,10 +1804,11 @@
                                 <span className="nav-meta">
                                     {version && <span className="text-xs text-3" style={{ cursor: 'pointer', textDecoration: 'underline dotted' }} onClick={() => setShowChangelog(true)} title="Changelog">v{version}</span>}
                                     <EnvBadge />
+                                    <span className="nav-date-mobile text-xs text-3">{new Date().toLocaleDateString('de-DE', { weekday: 'short', day: 'numeric', month: 'short', year: 'numeric' })}</span>
                                 </span>
                             </div>
                             <div className="row" style={{ gap: 4 }}>
-                                <span className="text-xs text-3" style={{ marginRight: 4 }}>{new Date().toLocaleDateString('de-DE', { weekday: 'short', day: 'numeric', month: 'short', year: 'numeric' })}</span>
+                                <span className="nav-date-desktop text-xs text-3" style={{ marginRight: 4 }}>{new Date().toLocaleDateString('de-DE', { weekday: 'short', day: 'numeric', month: 'short', year: 'numeric' })}</span>
                                 <span className="text-xs text-2" style={{ marginRight: 4 }}>{user}</span>
                                 <button className="btn btn-ghost" title={themeTitle} onClick={toggleTheme}>
                                     <ThemeIcon />
